issue with video on Safari fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -510,7 +510,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .youtube {
-  background-color: #d4aa7d;
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -518,11 +517,11 @@ h1, h2, h3, h4, h5, h6 {
   .container {
     position: relative;
   }
+
   .youtube-block {
     width: 100%;
     height: 800px;
     position: static;
-    z-index: 0;
     display: block;
     left: 0;
     top: 0;
@@ -532,6 +531,16 @@ h1, h2, h3, h4, h5, h6 {
       width: 100%;
       height:100%;
       overflow:hidden;
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 800px;
+        left: 0;
+        z-index: -1;
+        background: #8e622e;
+      }
       video {
         position: absolute;
         top: 50%;
@@ -542,22 +551,13 @@ h1, h2, h3, h4, h5, h6 {
         min-height: 100%;
         width: auto;
         height: auto;
-        z-index: -2;
         overflow: hidden;
+        mix-blend-mode: overlay;
       }
     }
 
   }
 
-  .orange-overlay {
-    position: absolute;
-    width: 100%;
-    height: 800px;
-    background: rgba(192, 154, 114, 1);
-    left: 0;
-    mix-blend-mode: color;
-    z-index: -1;
-  }
   img {
     width: 100%;
     margin-bottom: -7px;
